Fix layout bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -186,14 +186,18 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     > li {
         margin-bottom: $spacing-unit;
         max-width: 230px;
         padding: 0 5px 0 5px;
+        margin-left: 3px;
+        margin-right: 3px;
         @include media-query($on-laptop) {
             width: 45%;
             max-width: 45%;
+            margin-left: 1%;
+            margin-right: 1%;
         }
         @include media-query($on-palm) {
             width: 100%;
